@@ -44,7 +44,7 @@ public class SecurityQueryTemplateEvaluatorTests extends ESTestCase {
 
     public void testTemplating() throws Exception {
         User user = new User("_username", new String[] { "role1", "role2" }, "_full_name", "_email",
-                Collections.singletonMap("key", "value"), true);
+                Map.of("key", "value"), true);
 
         TemplateScript.Factory compiledTemplate = templateParams -> new TemplateScript(templateParams) {
             @Override
